added the function to also parse the location blocks in the config file and updated the config debug

--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -2,7 +2,7 @@ server {
     listen 8080;                         # PORT - to listen on
     server_name example.com;             # HOST - Server name (optional)
 
-    root /var/www/html;                  # Root directory for files
+    root         /var/www/html;                  # Root directory for files
     index index.html index.htm;          # Default files for directories
 
     # client_max_body_size 1M; 			 # default is 1M
@@ -17,14 +17,14 @@ server {
 	}
 
     location /api/ {
-        proxy_pass http://127.0.0.1:3000;	 # Reverse proxy to another server
+        # proxy_pass http://127.0.0.1:3000;	 # Reverse proxy to another server
     }
 
     location /upload/ {
-        upload_directory /var/www/uploads;
+        # upload_directory /var/www/uploads;
     	root 			www/data;
     	index 			index.html;
-		autoindex		on;					# to Turn On or Off Directory Listing
+		autoindex 		on;					# to Turn On or Off Directory Listing
     }
 
 	location ./cgi-bin {
@@ -32,7 +32,7 @@ server {
         allow_methods GET POST DELETE;
         index time.py;        
 		cgi_pass /usr/bin/python3;
-		cgi_ext .py .sh;				#do if it's easy or maybe do the one below
+		# cgi_ext .py .sh;				#do if it's easy or maybe do the one below
     }
 
 	location .py {
@@ -46,5 +46,6 @@ server {
         return 301 https://example.com;
     }
 
+    error_page 500 /500.html;
           # Custom error page
 }
