--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -5,7 +5,7 @@ server {
     root         /var/www/html;                  # Root directory for files
     index index.html index.htm;          # Default files for directories
 
-    # client_max_body_size 1M; 			 # default is 1M
+    client_max_body_size 1M; 			 # default is 1M
 
     error_page 404 /404.html; 
     error_page 400 /400.html; 
