created new class getResponse, a derived class of HTTPResponse

--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -12,7 +12,7 @@ server {
 
 
     location / {
-		allow_methods  DELETE POST GET;
+		allow_methods  POST GET;
 	    index index.html;
 	}
 
@@ -22,6 +22,7 @@ server {
 
     location /upload/ {
         # upload_directory /var/www/uploads;
+		allow_methods 	DELETE POST GET;
     	root 			www/data;
     	index 			index.html;
 		autoindex 		on;					# to Turn On or Off Directory Listing
@@ -29,7 +30,7 @@ server {
 
 	location ./cgi-bin {
         root ./;
-        allow_methods GET POST DELETE;
+        allow_methods GET POST;
         index time.py;        
 		cgi_pass /usr/bin/python3;
 		# cgi_ext .py .sh;				#do if it's easy or maybe do the one below
