changed the matchServerBlock function so it returns an int and therefore can give an error if no server block matches

--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -1,6 +1,6 @@
 server {
-    listen 8080;                         # PORT - to listen on
-    server_name example.com;             # HOST - Server name (optional)
+    listen 8081;                         # PORT - to listen on
+    server_name localhost:8081;             # HOST - Server name (optional)
 
     root         www;                  # Root directory for files
     index index.html index.htm;          # Default files for directories
@@ -51,8 +51,8 @@ server {
           # Custom error page
 }
 server_two {
-    listen 80;                         # PORT - to listen on
-    server_name example.com;             # HOST - Server name (optional)
+    listen 8080;                         # PORT - to listen on
+    server_name localhost:8080;             # HOST - Server name (optional)
 
     root         www;                  # Root directory for files
     index index.html index.htm;          # Default files for directories
