First working non-blocking version

--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -2,7 +2,7 @@ server {
     listen 8081;                         # PORT - to listen on
     server_name localhost:8081;          # HOST - Server name (optional)
 
-    root wwwwww;                            # Root directory for files
+    root www;                            # Root directory for files
     index index.html index.htm;          # Default files for directories
 
     client_max_body_size 1M;             # Default is 1M
