Rodrigo plus My part added

--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -19,6 +19,7 @@ server {
 
     # Uploads location
     location /uploads/ {
+        error_page 404 /444.html;    
         allow_methods DELETE POST GET;   # Add GET to allow fetching files
         root www;                   # Root directory specific to /uploads/
         index index.html;                # Default file
