headers, includes etc. tidyed up

--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -1,4 +1,55 @@
 server {
+    listen 8080;                         # PORT - to listen on
+    server_name localhost:8080;          # HOST - Server name (optional)
+
+    root www;                            # Root directory for files
+    index index.html index.htm;          # Default files for directories
+
+    client_max_body_size 1M;             # Default is 1M
+
+    error_page 404 /404.html;            # Custom error pages
+    error_page 400 /400.html; 
+    error_page 500 /500.html;
+
+    # Root location
+    location / {
+        allow_methods POST GET;          # Allow POST and GET methods
+        index index.html;                # Default file
+    }
+
+    # Uploads location
+    location /uploads/ {
+        error_page 404 /404.html;    
+        allow_methods DELETE POST GET;   # Add GET to allow fetching files
+        root www;                   # Root directory specific to /uploads/
+        index index.html;                # Default file
+        autoindex off;                   # Disable directory listing
+    }
+
+    # CGI-bin location
+    location /cgi-bin/ {
+        allow_methods GET POST;          # Allow GET and POST for CGI-bin
+        root ./;
+        index time.py;                   # Default file for CGI-bin
+        cgi_pass /usr/bin/python3;       # Python CGI
+        # cgi_ext .py .sh;               # File extensions (if supported by server)
+    }
+
+    # Python scripts
+    location ~ \.py$ {
+        allow_methods GET POST DELETE;   # Allow GET, POST, DELETE
+        root ./;
+        index time.py;                   # Default Python script
+        cgi_pass /usr/bin/python3;       # Python CGI handler
+    }
+
+    # Redirect example
+    location /return {
+        return 301 https://example.com;  # Redirect to example.com
+    }
+}
+
+server {
     listen 8081;                         # PORT - to listen on
     server_name localhost:8081;          # HOST - Server name (optional)
 
