make sure response works with new version of code, changed handle incoming data

--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -7,9 +7,9 @@ server {
 
     client_max_body_size 1M;             # Default is 1M
 
-    error_page 404 /404.html;            # Custom error pages
-    error_page 400 /400.html; 
-    error_page 500 /500.html;
+    error_page 404 /error_pages/404.html;            # Custom error pages
+    error_page 400 /error_pages/400.html; 
+    error_page 500 /error_pages/500.html;
 
     # Root location
     location / {
