--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
 	"files.associations": {
-		"stdexcept": "cpp",
 		"__bit_reference": "cpp",
 		"__config": "cpp",
 		"__debug": "cpp",
@@ -58,6 +57,7 @@
 		"set": "cpp",
 		"sstream": "cpp",
 		"stack": "cpp",
+		"stdexcept": "cpp",
 		"streambuf": "cpp",
 		"string": "cpp",
 		"string_view": "cpp",
@@ -67,6 +67,7 @@
 		"typeinfo": "cpp",
 		"unordered_map": "cpp",
 		"utility": "cpp",
-		"vector": "cpp"
+		"vector": "cpp",
+		"regex": "cpp"
 	}
 }
