--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -7,9 +7,9 @@ server {
 
     client_max_body_size 1M;             # Default is 1M
 
-    error_page 404 /error_pages/404.html;            # Custom error pages
-    error_page 400 /error_pages/400.html; 
-    error_page 500 /error_pages/500.html;
+    error_page 404 /404.html;            # Custom error pages
+    error_page 400 /400.html; 
+    error_page 500 /500.html;
 
     # Root location
     location / {
@@ -34,15 +34,7 @@ server {
         cgi_pass /usr/bin/python3;       # Python CGI
         # cgi_ext .py .sh;               # File extensions (if supported by server)
     }
-
-    # Python scripts
-    location ~ \.py$ {
-        allow_methods GET POST DELETE;   # Allow GET, POST, DELETE
-        root ./;
-        index time.py;                   # Default Python script
-        cgi_pass /usr/bin/python3;       # Python CGI handler
-    }
-
+    
     # Redirect example
     location /return {
         return 301 https://example.com;  # Redirect to example.com
