--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -20,7 +20,7 @@ server {
     # Uploads location
     location /uploads/ {
         error_page 404 /404.html;    
-        allow_methods DELETE POST GET;   # Add GET to allow fetching files
+        allow_methods POST GET;   # Add GET to allow fetching files
         root www;                   # Root directory specific to /uploads/
         index index.html;                # Default file
         autoindex off;                   # Disable directory listing
