fixed make debug so that it makes log directory if it doesn't exist. Made sure uploads take the path to upload to fromt he config file

--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -5,7 +5,7 @@ server {
     root www;                            # Root directory for files
     index index.html index.htm;          # Default files for directories
 
-    client_max_body_size 100000000M;             # Default is 1M
+    client_max_body_size 10M;             # Default is 1M
 
     error_page 404 /404.html;            # Custom error pages
     error_page 400 /400.html; 
@@ -20,8 +20,8 @@ server {
     # Uploads location
     location /uploads/ {
         error_page 404 /404.html;    
-        allow_methods POST GET;   # Add GET to allow fetching files
-        root www;                   # Root directory specific to /uploads/
+        allow_methods POST GET; 	     # Add GET to allow fetching files
+        root www/uploads/new/;           # Root directory specific to /uploads/
         index index.html;                # Default file
         autoindex off;                   # Disable directory listing
     }
@@ -48,7 +48,7 @@ server {
     root www;                            # Root directory for files
     index index.html index.htm;          # Default files for directories
 
-    client_max_body_size 100000000M;             # Default is 1M
+    client_max_body_size 10M;             # Default is 1M
 
     error_page 404 /404.html;            # Custom error pages
     error_page 400 /400.html; 
