--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -37,7 +37,7 @@ server {
     
     # Redirect example
     location /return {
-        return 301 https://example.com;  # Redirect to example.com
+        return 301 https://www.imdb.com/title/tt0213847/?ref_=nm_flmg_job_1_cdt_t_63;
     }
 }
 
