Returned to previous version

--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -21,7 +21,7 @@ server {
     location /uploads/ {
         error_page 404 /404.html;    
         allow_methods POST GET; 	     # Add GET to allow fetching files
-        root www/uploads/new/;           # Root directory specific to /uploads/
+        root www/uploads/;           # Root directory specific to /uploads/
         index index.html;                # Default file
         autoindex off;                   # Disable directory listing
     }
