added additional checks to ensure the config file is correctly formatted. Removed 301 from the redirect value

--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -3,7 +3,7 @@ server {
     server_name localhost:8080;          # HOST - Server name (optional)
 
     root www;                            # Root directory for files
-    index index.html index.htm;          # Default files for directories
+    index index.html;          # Default files for directories
 
     client_max_body_size 20M;             # Default is 1M
 
@@ -20,9 +20,9 @@ server {
     # Uploads location
     location /uploads/ {
         error_page 404 /404.html;    
-        allow_methods POST GET; 	     # Add GET to allow fetching files
+        allow_methods POST GET DELETE; 	     # Add GET to allow fetching files
         root www/uploads/;           # Root directory specific to /uploads/
-        index index.html;                # Default file
+        # index index.html;                # Default file
         autoindex off;                   # Disable directory listing
     }
 
@@ -42,7 +42,7 @@ server {
 }
 
 server {
-    listen 8081;                         # PORT - to listen on
+	listen 8081;                         # PORT - to listen on
     server_name localhost:8081;          # HOST - Server name (optional)
 
     root www;                            # Root directory for files
