index and autoindex

--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -20,10 +20,10 @@ server {
     # Uploads location
     location /uploads/ {
         error_page 404 /404.html;    
-        allow_methods POST GET; 	     # Add GET to allow fetching files
-        root www/uploads/;           # Root directory specific to /uploads/
-        index index.html;                # Default file
-        autoindex off;                   # Disable directory listing
+        root www;           # Root directory specific to /uploads/
+        allow_methods POST GET DELETE; 	     # Add GET to allow fetching files
+        # index index.html;                # Default file
+        autoindex on;                   # Disable directory listing
     }
 
     # CGI-bin location
@@ -37,7 +37,7 @@ server {
     
     # Redirect example
     location /return {
-        return 301 https://www.imdb.com/title/tt0213847/?ref_=nm_flmg_job_1_cdt_t_63;
+        return https://www.imdb.com/title/tt0213847/?ref_=nm_flmg_job_1_cdt_t_63;
     }
 }
 
@@ -88,6 +88,6 @@ server {
 
     # Redirect example
     location /return {
-        return 301 https://example.com;  # Redirect to example.com
+        return https://example.com;  # Redirect to example.com
     }
 }
