--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -22,7 +22,7 @@ server {
         error_page 404 /404.html;    
         root www;           # Root directory specific to /uploads/
         allow_methods POST GET DELETE; 	     # Add GET to allow fetching files
-        # index index.html;                # Default file
+        index index.html;                # Default file
         autoindex on;                   # Disable directory listing
     }
 
