--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -21,7 +21,7 @@ server {
     location /uploads/ {
         error_page 404 /404.html;    
         root www;           # Root directory specific to /uploads/
-        allow_methods GET; 	     # Add GET to allow fetching files
+        allow_methods GET POST DELETE; 	     # Add GET to allow fetching files
         index index.html;                # Default file
         autoindex on;                   # Disable directory listing
     }
