Fix hardcoded uri

--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -29,7 +29,7 @@ server {
     # CGI-bin location
     location /cgi-bin/ {
         allow_methods GET POST;          # Allow GET and POST for CGI-bin
-        root ./;
+        root www;
         index time.py;                   # Default file for CGI-bin
         cgi_pass /usr/bin/python3;       # Python CGI
         # cgi_ext .py .sh;               # File extensions (if supported by server)
