--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -3,7 +3,7 @@ server {
     server_name localhost:8080;          # HOST - Server name (optional)
 
     root www;                            # Root directory for files
-    index index.html index.htm;          # Default files for directories
+    index index.html;          # Default files for directories
 
     client_max_body_size 20M;             # Default is 1M
 
