--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -22,8 +22,8 @@ server {
         error_page 404 /404.html;    
         root www;           # Root directory specific to /uploads/
         allow_methods GET POST DELETE; 	     # Add GET to allow fetching files
-        index index.html;                # Default file
-        autoindex on;                   # Disable directory listing
+        # index index.html;                # Default file
+        autoindex off;                   # Disable directory listing
     }
 
     # CGI-bin location
@@ -37,7 +37,7 @@ server {
     
     # Redirect example
     location /return {
-        return https://www.imdb.com/title/tt0213847/?ref_=nm_flmg_job_1_cdt_t_63;
+        return https://www.imdb.com/title/tt0172495/?ref_=fn_all_ttl_2;
     }
 }
 
@@ -88,6 +88,7 @@ server {
 
     # Redirect example
     location /return {
+        allow_methods GET;
         return https://example.com;  # Redirect to example.com
     }
 }
