--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -43,7 +43,7 @@ server {
     
     # Redirect example
     location /return {
-        return 301 https://www.imdb.com/title/tt0213847/?ref_=nm_flmg_job_1_cdt_t_63;
+        return https://www.imdb.com/title/tt0213847/?ref_=nm_flmg_job_1_cdt_t_63;
     }
 }
 
