--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -14,7 +14,8 @@ server {
     # Root location
     location / {
         allow_methods GET POST;          # Allow POST and GET methods
-        index index.html;                # Default file
+        index index.html;      
+        # return 301 https://www.imdb.com/title/tt0172495/;    # Default file
     }
 
     # Root location
@@ -42,7 +43,9 @@ server {
     }
     
     # Redirect example
-    location /return {
+    location /Graham/ {
+        allow_methods GET;
+        index index.html;
         return 301 https://www.imdb.com/title/tt0213847/?ref_=nm_flmg_job_1_cdt_t_63;
     }
 }
