updated serverblock to make the _host_name correctly after parsing listen and server_name

--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -1,6 +1,6 @@
 server {
     listen 8080;                         # PORT - to listen on
-    server_name localhost:8080;          # HOST - Server name (optional)
+    server_name localhost;          # HOST - Server name (optional)
 
     root www;                            # Root directory for files
     index index.html;          # Default files for directories
@@ -41,9 +41,9 @@ server {
         cgi_pass /usr/bin/python3;       # Python CGI
         # cgi_ext .py .sh;               # File extensions (if supported by server)
     }
-    
+
     # Redirect example
-    location /Graham/ {
+    location /redir/ {
         allow_methods GET;
         index index.html;
         return 301 https://www.imdb.com/title/tt0213847/?ref_=nm_flmg_job_1_cdt_t_63;
@@ -52,7 +52,7 @@ server {
 
 server {
 	listen 8081;                         # PORT - to listen on
-    server_name localhost:8081;          # HOST - Server name (optional)
+    server_name localhost;          # HOST - Server name (optional)
 
     root www;                            # Root directory for files
     index index.html index.htm;          # Default files for directories
