Caught thrown errors

--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -13,7 +13,7 @@ server {
 
     # Root location
     location / {
-        allow_methods GET POST;          # Allow POST and GET methods
+        allow_methods POST;          # Allow POST and GET methods
         index index.html;      
         # return 301 https://www.imdb.com/title/tt0172495/;    # Default file
     }
@@ -29,7 +29,7 @@ server {
     location /uploads/ {  
         allow_methods POST GET DELETE; 	     # Add GET to allow fetching files
         root www;           # Root directory specific to /uploads/
-        index index.html;                # Default file
+        # index index.html;                # Default file
         autoindex on;                   # Disable directory listing
     }
 
@@ -65,7 +65,7 @@ server {
 
     # Root location
     location / {
-        allow_methods POST GET;          # Allow POST and GET methods
+        allow_methods POST;          # Allow POST and GET methods
         index index.html;                # Default file
     }
 
@@ -98,5 +98,57 @@ server {
     location /return {
         allow_methods GET;
         return https://example.com;  # Redirect to example.com
+    }
+}
+server {
+    listen 8082;                         # PORT - to listen on
+    server_name localhost;          # HOST - Server name (optional)
+
+    root www;                            # Root directory for files
+    index log.html;          # Default files for directories
+
+    client_max_body_size 20M;            # Default is 1M
+
+    error_page 404 /error_pages/404.html;            # Custom error pages
+    error_page 400 /error_pages/400.html; 
+    error_page 500 /error_pages/500.html;
+
+    # Root location
+    location / {
+        allow_methods GET POST;          # Allow POST and GET methods
+        index log.html;          # Default files for directories
+        # index index.html;      
+        # return 301 https://www.imdb.com/title/tt0172495/;    # Default file
+    }
+
+    # Root location
+    location /test/ {
+		root			www/test;
+        allow_methods 	GET;          # Allow POST and GET methods
+        index 			test.html;                # Default file
+    }
+
+    # Uploads location
+    location /uploads/ {  
+        allow_methods POST GET DELETE; 	     # Add GET to allow fetching files
+        root www;           # Root directory specific to /uploads/
+        index index.html;                # Default file
+        autoindex on;                   # Disable directory listing
+    }
+
+    # CGI-bin location
+    location /cgi-bin/ {
+        allow_methods GET POST;          # Allow GET and POST for CGI-bin
+        root www;
+        index time.py;                   # Default file for CGI-bin
+        cgi_pass /usr/bin/python3;       # Python CGI
+        # cgi_ext .py .sh;               # File extensions (if supported by server)
+    }
+
+    # Redirect example
+    location /redir/ {
+        allow_methods GET;
+        index index.html;
+        return 301 https://www.imdb.com/title/tt0213847/?ref_=nm_flmg_job_1_cdt_t_63;
     }
 }
