Fixed connection close

--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -13,7 +13,7 @@ server {
 
     # Root location
     location / {
-        allow_methods POST;          # Allow POST and GET methods
+        allow_methods GET POST;          # Allow POST and GET methods
         index index.html;      
         # return 301 https://www.imdb.com/title/tt0172495/;    # Default file
     }
