--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -5,7 +5,7 @@ server {
     root www;                            # Root directory for files
     index index.html;          # Default files for directories
 
-    client_max_body_size 20M;            # Default is 1M
+    client_max_body_size 20k;            # Default is 1M
 
     error_page 404 /error_pages/404.html;            # Custom error pages
     error_page 400 /error_pages/400.html; 
@@ -28,9 +28,9 @@ server {
     # Uploads location
     location /uploads/ {  
         allow_methods POST GET DELETE; 	     # Add GET to allow fetching files
-        root www;           # Root directory specific to /uploads/
-        # index index.html;                # Default file
-        autoindex on;                   # Disable directory listing
+        root www;           				# Root directory specific to /uploads/
+        # index index.html;            	    # Default file
+        autoindex on;                  		 # Disable directory listing
     }
 
     # CGI-bin location
