--- a/config/config_TEMPLATE.conf
+++ b/config/config_TEMPLATE.conf
@@ -5,7 +5,7 @@ server {
     root www;                            # Root directory for files
     index index.html;          # Default files for directories
 
-    client_max_body_size 10k;            # Default is 1M
+    client_max_body_size 20M;            # Default is 1M
 
     error_page 404 /error_pages/404.html;            # Custom error pages
     error_page 400 /error_pages/400.html; 
@@ -15,7 +15,6 @@ server {
     location / {
         allow_methods GET POST;          # Allow POST and GET methods
         index index.html;      
-        # return 301 https://www.imdb.com/title/tt0172495/;    # Default file
     }
 
     # Root location
@@ -38,76 +37,23 @@ server {
         allow_methods GET POST;          # Allow GET and POST for CGI-bin
         root www;
         index time.py;                   # Default file for CGI-bin
-        cgi_pass /usr/bin/python3;       # Python CGI
-        # cgi_ext .py .sh;               # File extensions (if supported by server)
     }
 
     # Redirect example
     location /redir/ {
         allow_methods GET;
         index index.html;
-        return 301 https://www.imdb.com/title/tt0213847/?ref_=nm_flmg_job_1_cdt_t_63;
-    }
-}
-
-server {
-	listen 8081;                         # PORT - to listen on
-    server_name localhost;          # HOST - Server name (optional)
-
-    root www;                            # Root directory for files
-    index index.html index.htm;          # Default files for directories
-
-    client_max_body_size 20M;             # Default is 1M
-
-    error_page 404 /404.html;            # Custom error pages
-    error_page 400 /400.html; 
-    error_page 500 /500.html;
-
-    # Root location
-    location / {
-        allow_methods POST;          # Allow POST and GET methods
-        index index.html;                # Default file
-    }
-
-    # Uploads location
-    location /uploads/ {
-        allow_methods DELETE POST GET;   # Add GET to allow fetching files
-        root www;                   # Root directory specific to /uploads/
-        index index.html;                # Default file
-        autoindex off;                   # Disable directory listing
-    }
-
-    # CGI-bin location
-    location /cgi-bin/ {
-        allow_methods GET POST;          # Allow GET and POST for CGI-bin
-        root ./;
-        index time.py;                   # Default file for CGI-bin
-        cgi_pass /usr/bin/python3;       # Python CGI
-        # cgi_ext .py .sh;               # File extensions (if supported by server)
-    }
-
-    # Python scripts
-    location ~ \.py$ {
-        allow_methods GET POST DELETE;   # Allow GET, POST, DELETE
-        root ./;
-        index time.py;                   # Default Python script
-        cgi_pass /usr/bin/python3;       # Python CGI handler
-    }
-
-    # Redirect example
-    location /return {
-        allow_methods GET;
-        return https://example.com;  # Redirect to example.com
+        return 301 https://www.imdb.com/title/tt0172495/;    # Default file
     }
 }
 server {
-    listen 8082;                         # PORT - to listen on
+    listen 8081;                         # PORT - to listen on
     server_name localhost;          # HOST - Server name (optional)
 
     root www;                            # Root directory for files
-    index log.html;          # Default files for directories
+    index index.html;          # Default files for directories
 
-    client_max_body_size 20M;            # Default is 1M
+    client_max_body_size 10k;            # Default is 1M
 
     error_page 404 /error_pages/404.html;            # Custom error pages
     error_page 400 /error_pages/400.html; 
@@ -116,9 +62,7 @@ server {
     # Root location
     location / {
         allow_methods GET POST;          # Allow POST and GET methods
-        index log.html;          # Default files for directories
-        # index index.html;      
-        # return 301 https://www.imdb.com/title/tt0172495/;    # Default file
+        index index.html;      
     }
 
     # Root location
@@ -131,9 +75,9 @@ server {
     # Uploads location
     location /uploads/ {  
         allow_methods POST GET DELETE; 	     # Add GET to allow fetching files
-        root www;           # Root directory specific to /uploads/
-        index index.html;                # Default file
-        autoindex on;                   # Disable directory listing
+        root www;           				# Root directory specific to /uploads/
+        # index index.html;            	    # Default file
+        autoindex on;                  		 # Disable directory listing
     }
 
     # CGI-bin location
@@ -141,14 +85,14 @@ server {
         allow_methods GET POST;          # Allow GET and POST for CGI-bin
         root www;
         index time.py;                   # Default file for CGI-bin
-        cgi_pass /usr/bin/python3;       # Python CGI
-        # cgi_ext .py .sh;               # File extensions (if supported by server)
     }
 
     # Redirect example
     location /redir/ {
         allow_methods GET;
         index index.html;
-        return 301 https://www.imdb.com/title/tt0213847/?ref_=nm_flmg_job_1_cdt_t_63;
+        return 301 https://www.imdb.com/title/tt0172495/;    # Default file
     }
 }
+
+
